; ModuleID = '/home/carl/AnghaBench/redis/src/extr_lazyfree.c_slotToKeyFlushAsync.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_lazyfree.c_slotToKeyFlushAsync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }

@server = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@lazyfree_objects = common dso_local global i32 0, align 4
@BIO_LAZY_FREE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @slotToKeyFlushAsync() #0 {
  %1 = alloca %struct.TYPE_7__*, align 8
  %2 = load %struct.TYPE_6__*, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @server, i32 0, i32 0), align 8
  %3 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %2, i32 0, i32 1
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  store %struct.TYPE_7__* %4, %struct.TYPE_7__** %1, align 8
  %5 = call %struct.TYPE_7__* (...) @raxNew()
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @server, i32 0, i32 0), align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 1
  store %struct.TYPE_7__* %5, %struct.TYPE_7__** %7, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @server, i32 0, i32 0), align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @memset(i32 %10, i32 0, i32 4)
  %12 = load i32, i32* @lazyfree_objects, align 4
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @atomicIncr(i32 %12, i32 %15)
  %17 = load i32, i32* @BIO_LAZY_FREE, align 4
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %19 = call i32 @bioCreateBackgroundJob(i32 %17, i32* null, i32* null, %struct.TYPE_7__* %18)
  ret void
}

declare dso_local %struct.TYPE_7__* @raxNew(...) #1

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @atomicIncr(i32, i32) #1

declare dso_local i32 @bioCreateBackgroundJob(i32, i32*, i32*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
